--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 
                       <script>
                         const pairAddress =
-                          "JBahfY5TSFaBooJ5N186Zd9JNvVgm9iHRJSUFT5KqNxA";
+                          "9GCnRzFdL6DQNv2xJ1WEcbRKNjcUwECrVVeNbt5rpump";
                         const chain = "solana";
                         const el = document.getElementById("market-cap");
 
@@ -478,7 +478,7 @@
                       </script>
                       <a
                         class="ng-latest-supporter-button"
-                        href="https://www.newgrounds.com/supporter"
+                        href="https://swap.pump.fun/?input=So11111111111111111111111111111111111111112&output=9GCnRzFdL6DQNv2xJ1WEcbRKNjcUwECrVVeNbt5rpump"
                         target="_blank"
                         >Buy</a
                       >
@@ -506,7 +506,7 @@
                     <span>
                       <a
                         class="icon-share"
-                        href="https://www.newgrounds.com/content/share/4592600/4"
+                        href="#"
                         id="share_content"
                         rel="nofollow"
                         title="Share"
@@ -956,7 +956,7 @@
                   </div>
                   <div class="pod-body art-view">
                     <a
-                      href="https://x.com"
+                      href="https://x.com/beb_cto"
                       class="item-portalitem-art-small"
                       title="Can You Keep Up?"
                       data-art-slide="oogooboggins/can-you-keep-up"
@@ -967,7 +967,7 @@
                       <div class="rated-e item-suitability"></div>
                     </a>
                     <a
-                      href="https://telegram.com"
+                      href="https://t.me/beb_cto"
                       class="item-portalitem-art-small"
                       title="Grub"
                       data-art-slide="oogooboggins/grub"
@@ -978,7 +978,7 @@
                       <div class="rated-e item-suitability"></div>
                     </a>
                     <a
-                      href="https://jupiter.com"
+                      href="https://jup.ag/swap/So11111111111111111111111111111111111111112-9GCnRzFdL6DQNv2xJ1WEcbRKNjcUwECrVVeNbt5rpump"
                       class="item-portalitem-art-small"
                       title="Hawk Ptooey"
                       data-art-slide="oogooboggins/hawk-ptooey"
@@ -989,7 +989,7 @@
                       <div class="rated-e item-suitability"></div>
                     </a>
                     <a
-                      href="https://dextools.com"
+                      href="https://www.dextools.io/app/en/solana/pair-explorer/6hWHFgyhevajwiz5ZKt7C1Eze8dwoCaPzjhNTVfSNUFQ?t=1750372463015"
                       class="item-portalitem-art-small"
                       title="Bad Pose"
                       data-art-slide="oogooboggins/bad-pose"
@@ -1000,7 +1000,7 @@
                       <div class="rated-e item-suitability"></div>
                     </a>
                     <a
-                      href="https://pumpswap.com"
+                      href="https://swap.pump.fun/?input=So11111111111111111111111111111111111111112&output=9GCnRzFdL6DQNv2xJ1WEcbRKNjcUwECrVVeNbt5rpump"
                       class="item-portalitem-art-small"
                       title="Sha-zing!"
                       data-art-slide="oogooboggins/sha-zing"
@@ -1011,7 +1011,7 @@
                       <div class="rated-e item-suitability"></div>
                     </a>
                     <a
-                      href="https://dexscreener.com"
+                      href="https://dexscreener.com/solana/6hwhfgyhevajwiz5zkt7c1eze8dwocapzjhntvfsnufq"
                       class="item-portalitem-art-small"
                       title="Cool Pattern"
                       data-art-slide="oogooboggins/cool-pattern"
@@ -1030,7 +1030,7 @@
                   </div>
                   <div class="pod-body creative-commons">
                     <p style="font-size: 12px">
-                      DtR4D9FtVoTX2569gaL837ZgrB6wNjj6tkmnX9Rdk9B2
+                      9GCnRzFdL6DQNv2xJ1WEcbRKNjcUwECrVVeNbt5rpump
                     </p>
                   </div>
                 </div>
