--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                               id="684c0b39be363-1946658"
                               data-action="view-image"
                               ><img
-                                data-smartload-src="https://art.ngfiles.com/images/6638000/6638111_1946658_oogooboggins_untitled-6638111.a7137acb407f0ff8c7e3c3d5b08ee585.webp?f1745558286"
+                                data-smartload-src="../../../images/6638000/6638111_1946658_oogooboggins_untitled-6638111.a7137acb407f0ff8c7e3c3d5b08ee585.webp?f1745558286"
                                 itemprop="image"
                                 data-smart-scale="370,497"
                                 style="margin: 0px; max-width: 100%"
@@ -594,7 +594,7 @@
                                 jQuery("#684c0b39be363-1946658").removeAttr(
                                   "id"
                                 ),
-                                "https://art.ngfiles.com/images/6638000/6638111_1946658_oogooboggins_untitled-6638111.a7137acb407f0ff8c7e3c3d5b08ee585.webp?f1745558286",
+                                "../../../images/6638000/6638111_1946658_oogooboggins_untitled-6638111.a7137acb407f0ff8c7e3c3d5b08ee585.webp?f1745558286",
                                 {
                                   galleryID: "684c0b39be363",
                                   index: 1,
