--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                               id="684c0b39be363-1946659"
                               data-action="view-image"
                               ><img
-                                data-smartload-src="https://art.ngfiles.com/images/6638000/6638111_1946659_oogooboggins_untitled-6638111.caad8d14c341329a74c4162bbb4d22f6.webp?f1745558342"
+                                data-smartload-src="../../../images/6638000/6638111_1946659_oogooboggins_untitled-6638111.caad8d14c341329a74c4162bbb4d22f6.webp?f1745558342"
                                 itemprop="image"
                                 data-smart-scale="454,462"
                                 style="margin: 0px; max-width: 100%"
@@ -630,7 +630,7 @@
                                 jQuery("#684c0b39be363-1946659").removeAttr(
                                   "id"
                                 ),
-                                "https://art.ngfiles.com/images/6638000/6638111_1946659_oogooboggins_untitled-6638111.caad8d14c341329a74c4162bbb4d22f6.webp?f1745558342",
+                                "../../../images/6638000/6638111_1946659_oogooboggins_untitled-6638111.caad8d14c341329a74c4162bbb4d22f6.webp?f1745558342",
                                 {
                                   galleryID: "684c0b39be363",
                                   index: 2,
@@ -656,7 +656,7 @@
                               id="684c0b39be363-1946660"
                               data-action="view-image"
                               ><img
-                                data-smartload-src="https://art.ngfiles.com/images/6638000/6638111_1946660_oogooboggins_untitled-6638111.7a7080e19bd9a2872dc6701849ec8f46.webp?f1745558342"
+                                data-smartload-src="../../../images/6638000/6638111_1946660_oogooboggins_untitled-6638111.7a7080e19bd9a2872dc6701849ec8f46.webp?f1745558342"
                                 itemprop="image"
                                 data-smart-scale="577,397"
                                 style="margin: 0px; max-width: 100%"
@@ -666,7 +666,7 @@
                                 jQuery("#684c0b39be363-1946660").removeAttr(
                                   "id"
                                 ),
-                                "https://art.ngfiles.com/images/6638000/6638111_1946660_oogooboggins_untitled-6638111.7a7080e19bd9a2872dc6701849ec8f46.webp?f1745558342",
+                                "../../../images/6638000/6638111_1946660_oogooboggins_untitled-6638111.7a7080e19bd9a2872dc6701849ec8f46.webp?f1745558342",
                                 {
                                   galleryID: "684c0b39be363",
                                   index: 3,
@@ -692,7 +692,7 @@
                               id="684c0b39be363-1946661"
                               data-action="view-image"
                               ><img
-                                data-smartload-src="https://art.ngfiles.com/images/6638000/6638111_1946661_oogooboggins_untitled-6638111.47779ebd01aeeb3b7c5177783e28d8f6.webp?f1745558343"
+                                data-smartload-src="../../../images/6638000/6638111_1946661_oogooboggins_untitled-6638111.47779ebd01aeeb3b7c5177783e28d8f6.webp?f1745558343"
                                 itemprop="image"
                                 data-smart-scale="707,685"
                                 style="margin: 0px; max-width: 100%"
@@ -702,7 +702,7 @@
                                 jQuery("#684c0b39be363-1946661").removeAttr(
                                   "id"
                                 ),
-                                "https://art.ngfiles.com/images/6638000/6638111_1946661_oogooboggins_untitled-6638111.47779ebd01aeeb3b7c5177783e28d8f6.webp?f1745558343",
+                                "../../../images/6638000/6638111_1946661_oogooboggins_untitled-6638111.47779ebd01aeeb3b7c5177783e28d8f6.webp?f1745558343",
                                 {
                                   galleryID: "684c0b39be363",
                                   index: 4,
@@ -728,7 +728,7 @@
                               id="684c0b39be363-1946662"
                               data-action="view-image"
                               ><img
-                                data-smartload-src="https://art.ngfiles.com/medium_views/6638000/6638111_1946662_oogooboggins_untitled-6638111.ae215fec76cb3df3cf913fd412eec76b.webp?f1745558403"
+                                data-smartload-src="../../../images/6638000/6638111_1946662_oogooboggins_untitled-6638111.ae215fec76cb3df3cf913fd412eec76b.webp?f1745558402"
                                 itemprop="image"
                                 data-smart-scale="998,1074"
                                 style="margin: 0px; max-width: 100%"
