--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                     <span>
                       <a
                         class="icon-share"
-                        href="#"
+                        href="https://bebcto.xyz/"
                         id="share_content"
                         rel="nofollow"
                         title="Share"
