--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                     <span>
                       <a
                         class="icon-share"
-                        href="https://bebcto.xyz/"
+                        href="https://pump.fun/coin/9GCnRzFdL6DQNv2xJ1WEcbRKNjcUwECrVVeNbt5rpump"
                         id="share_content"
                         rel="nofollow"
                         title="Share"
